--- a/src/Components/chatbot1/css/request.css
+++ b/src/Components/chatbot1/css/request.css
@@ -1,9 +1,33 @@
+/* width */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  height: 20px;
+  background: #f1f1f1;  
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(206, 205, 205); 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(219, 218, 218); 
+}
 .inputMessage{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: 30px;
+    position: relative;
+    overflow-y: hidden;
+
 }
 input {
     width: 100%;
@@ -12,7 +36,9 @@ input {
     border-right-style: hidden;
     border-left-style: hidden;
     border-bottom-style: groove;
-    background-color: #eee;
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px;
+    padding-left: 20px;
   }
   
   .no-outline:focus {
@@ -23,20 +49,38 @@ input {
       width: auto;
       color: black;
       list-style-type: none;
+      cursor: pointer;
+  }
+  ul{
+    width: 200px;
+    height: auto;
+    margin-top: 60px;
+    overflow-y: scroll;
+    right:25px;
+    top: 30px;
+    bottom: 0px;
+    position:fixed;
+    margin-bottom: 30px;
+    /* z-index: 10; */
+
   }
   li{
     width: auto;
-    height: 30px;
+    height: auto;
+    padding: 5px;
     border: 1px solid lightgray;
     border-radius: 15px;
     background-color: white;
     margin-bottom: 30px;
     display: flex;
-    align-items: center;
+    text-align: start;
+    align-items: flex-start;
     justify-content: flex-end;
     padding-right: 30px;
+    margin-right: 20px;
   }
   button{
       width: 90px;
       height: 40px;
+      border-radius: 15px;
   }
